# v2-fields-of-mars

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  mars_account_nft.wasm  mars_credit_manager.wasm  mars_mock_credit_manager.wasm  mars_mock_oracle.wasm  mars_mock_red_bank.wasm  mars_mock_vault.wasm  mars_swapper_base.wasm  mars_swapper_mock.wasm  mars_swapper_osmosis.wasm  mars_zapper_base.wasm  mars_zapper_mock.wasm  mars_zapper_osmosis.wasm
contracts/credit-manager/: Cargo.toml
contracts/credit-manager/src/: contract.rs  execute.rs  health.rs  lib.rs  liquidate_coin.rs  query.rs  update_config.rs  utils.rs
contracts/credit-manager/src/vault/: enter.rs  utils.rs
contracts/credit-manager/tests/: test_emergency_powers.rs  test_health.rs  test_update_admin.rs  test_update_config.rs  test_update_nft_config.rs  test_zap_withdraw.rs
contracts/credit-manager/tests/helpers/: mock_env.rs
contracts/mock-red-bank/: Cargo.toml
contracts/mock-red-bank/src/: contract.rs  query.rs
contracts/mock-vault/: Cargo.toml
contracts/mock-vault/src/: query.rs
schemas/mars-account-nft/: mars-account-nft.json
schemas/mars-credit-manager/: mars-credit-manager.json
schemas/mars-mock-credit-manager/: mars-mock-credit-manager.json
schemas/mars-mock-oracle/: mars-mock-oracle.json
schemas/mars-mock-red-bank/: mars-mock-red-bank.json
schemas/mars-mock-vault/: mars-mock-vault.json
schemas/mars-swapper-base/: mars-swapper-base.json
schemas/mars-zapper-base/: mars-zapper-base.json
scripts/: package.json
scripts/deploy/addresses/: osmo-test-4-testnet-deployer-owner.json  osmo-test-4-testnet-multisig.json  osmo-test-4.json  osmo-test-5-testnet-deployer-owner.json  osmosis-1-mainnet.json
scripts/deploy/base/: deployer.ts  index.ts  setupDeployer.ts
scripts/deploy/osmosis/: config.ts  mainnet.ts  testnet-config.ts  testnet-multisig.ts
scripts/multisig/osmosis/: multisig-responsibilities.md  multisig-setup.md
scripts/types/: config.ts
