[workspace]
members = [
  "contracts/account-nft",
  "contracts/credit-manager",
  "contracts/swapper/*",
  "contracts/zapper/*",
  "packages/health",
  "packages/rover",

  # Mock contracts
  "contracts/mock-oracle",
  "contracts/mock-red-bank",
  "contracts/mock-vault",
  "contracts/mock-credit-manager",
]

[workspace.package]
version       = "1.0.0"
authors       = [
  "Gabe R. <gabe.r@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
  "Piotr Babel <piotr@delphilabs.io>",
]
license       = "GPL-3.0-or-later"
edition       = "2021"
repository    = "https://github.com/mars-protocol/rover"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["mars", "cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow            = "1.0.69"
cosmwasm-schema   = "1.2.1"
cosmwasm-std      = "1.2.1"
cw2               = "1.0.1"
cw721             = "0.16.0"
cw721-base        = { version = "0.16.0", features = ["library"] }
cw-item-set       = { version = "0.7.0", default-features = false, features = ["iterator"] }
cw-multi-test     = "0.16.2"
cw-utils          = "1.0.1"
cw-storage-plus   = "1.0.1"
itertools         = "0.10.5"
osmosis-std       = "0.14.0"
osmosis-test-tube = "14.1.1"
schemars          = "0.8.11"
semver            = "1.0.17"
serde             = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror         = "1.0.38"

# packages
cw-dex              = { version = "0.1.1", features = ["osmosis"] }
cw-vault-standard   = { version = "0.2.0", features = ["lockup", "force-unlock"] }
mars-health         = { version = "1.0.0", path = "./packages/health" }
mars-osmosis        = { git = "https://github.com/mars-protocol/red-bank", rev = "d2a4b12f21344f1b572c0b2f75da585a4d2cc003" }
mars-red-bank-types = "1.0.0"
mars-owner          = { version = "1.1.0", features = ["emergency-owner"] }
mars-rover          = { version = "1.0.0", path = "./packages/rover" }

# contracts
mars-account-nft  = { version = "1.0.0", path = "./contracts/account-nft", features = ["library"] }
mars-swapper-base = { version = "1.0.0", path = "./contracts/swapper/base" }
mars-zapper-base  = { version = "1.0.0", path = "./contracts/zapper/base" }

# mocks
mars-mock-credit-manager = { version = "1.0.0", path = "./contracts/mock-credit-manager", features = ["library"] }
mars-mock-oracle         = { version = "1.0.0", path = "./contracts/mock-oracle", features = ["library"] }
mars-mock-red-bank       = { version = "1.0.0", path = "./contracts/mock-red-bank", features = ["library"] }
mars-mock-vault          = { version = "1.0.0", path = "./contracts/mock-vault", features = ["library"] }
mars-swapper-mock        = { version = "1.0.0", path = "./contracts/swapper/mock", features = ["library"] }
mars-zapper-mock         = { version = "1.0.0", path = "./contracts/zapper/mock", features = ["library"] }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
